--- a/front/index.html
+++ b/front/index.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
         <title>kaitBusTime</title>
+        <meta name="theme-color" content="#8BC34A">
         <link rel="stylesheet" href="css/html5reset-1.6.1.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <div id="first" style="display:block">
@@ -44,5 +46,16 @@
         </div>
         <script type="text/javascript" src="js/uiOperation.js"></script>
         <script type="text/javascript" src="js/getTimeData.js"></script>
+        <script>
+            window.addEventListener('load', function() {
+                if ('serviceWorker' in navigator) {
+                    navigator.serviceWorker.register("serviceWorker.js").then(function(registration) {
+                        console.log("serviceWorker registed.");
+                    }).catch(function(error) {
+                        console.warn("serviceWorker error.", error);
+                    });
+                }
+            });
+        </script>
     </body>
 </html>
